...
                onClick = {},
                colors = ButtonDefaults.buttonColors(Color(0xFF3BB54A)),
                modifier = Modifier
                    .align(Alignment.End)
                    .padding(top = 8.dp)
            ) {
                Text("Submit", color = Color.White)
            }
        }
    }
}

/* -------- STAR RATING -------- */
...
