...
            Button(
                onClick = onAddProduct,
                modifier = Modifier.weight(1f),
                shape = RoundedCornerShape(8.dp),
                colors = ButtonDefaults.buttonColors(containerColor = adminBrown)
            ) {
                Text("Add Product", color = Color.White)
            }
        }

        Spacer(modifier = Modifier.height(32.dp))

        Text(
...
